# l3-remote-desktop

./: .gitignore  README.md  l3-remote-desktop  pyproject.toml
examples/: l3-remote-desktop.yml
extras/: PKGBUILD
src/l3remotedesktop/: main.py  portal.py  rdp.py  ui.py
